force-app/main/default/objects/Rule__c/fields/BusinessReference__c.field-meta.xml
<CustomField>
    <fullName>BusinessReference__c</fullName>
    <label>Business Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>