force-app/main/default/objects/Rule__c/fields/CombinedElements__c.field-meta.xml
<CustomField>
    <fullName>CombinedElements__c</fullName>
    <formula>ElementData1__r.Value__c +
IF(ISBLANK(ElementData2__r.Value__c),&apos;, &apos;, &apos;, &apos; + ElementData2__r.Value__c) +
IF(ISBLANK(ElementData3__r.Value__c),&apos;, &apos;, &apos;, &apos; + ElementData3__r.Value__c) +
IF(ISBLANK(ElementData4__r.Value__c),&apos;, &apos;, &apos;, &apos; + ElementData4__r.Value__c) +
IF(ISBLANK(ElementData5__r.Value__c),&apos;, &apos;, &apos;, &apos; + ElementData5__r.Value__c) +
IF(ISBLANK(ElementData6__r.Value__c),&apos;, &apos;, &apos;, &apos; + ElementData6__r.Value__c)</formula>
    <label>Combined Elements</label>
    <type>Text</type>
</CustomField>