force-app/main/default/objects/Rule__c/fields/CombinedRule__c.field-meta.xml
<CustomField>
    <fullName>CombinedRule__c</fullName>
    <formula
  >IF(ISBLANK(Factor1__c), &apos;&apos;, Factor1__c + &apos;, &apos;) +
	IF(ISBLANK(Factor2__c),&apos;&apos;, Factor2__c + &apos;, &apos;) +
		IF(ISBLANK(Factor3__c),&apos;&apos;, Factor3__c + &apos;, &apos;) +
			IF(ISBLANK(Factor4__c),&apos;&apos;, Factor4__c + &apos;, &apos;) +
				IF(ISBLANK(Factor5__c),&apos;&apos;, Factor5__c + &apos;, &apos;) +
					IF(ISBLANK(Factor6__c),&apos;&apos;, Factor6__c + &apos;,&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Rule</label>
    <type>Text</type>
</CustomField>