force-app/main/default/objects/Rule__c/fields/CompleteRule__c.field-meta.xml
<CustomField>
    <fullName>CompleteRule__c</fullName>
    <formula>LEFT( CombinedRule__c , LEN(CombinedRule__c) - 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Rule</label>
    <type>Text</type>
</CustomField>