force-app/main/default/objects/Rule__c/fields/ElementData1__c.field-meta.xml
<CustomField>
    <fullName>ElementData1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Element Data 1</label>
    <referenceTo>ElementData__c</referenceTo>
    <relationshipLabel>Element Rule 1</relationshipLabel>
    <relationshipName>Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>