force-app/main/default/objects/Rule__c/fields/ElementData2__c.field-meta.xml
<CustomField>
    <fullName>ElementData2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Element Data 2</label>
    <referenceTo>ElementData__c</referenceTo>
    <relationshipLabel>Element Rule 2</relationshipLabel>
    <relationshipName>Rules2</relationshipName>
    <type>Lookup</type>
</CustomField>