force-app/main/default/objects/Rule__c/fields/ElementData3__c.field-meta.xml
<CustomField>
    <fullName>ElementData3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Element Data 3</label>
    <referenceTo>ElementData__c</referenceTo>
    <relationshipLabel>Element Rule 3</relationshipLabel>
    <relationshipName>Rules3</relationshipName>
    <type>Lookup</type>
</CustomField>