force-app/main/default/objects/Rule__c/fields/Factor1__c.field-meta.xml
<CustomField>
    <fullName>Factor1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Factor1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>