force-app/main/default/objects/Rule__c/fields/Factor2__c.field-meta.xml
<CustomField>
    <fullName>Factor2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Factor2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>