force-app/main/default/objects/Rule__c/fields/HandledHow__c.field-meta.xml
<CustomField>
    <fullName>HandledHow__c</fullName>
    <label>Handled How</label>
    <length>255</length>
    <type>Text</type>
</CustomField>