force-app/main/default/objects/Rule__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>