force-app/main/default/objects/Rule__c/fields/SystemReference__c.field-meta.xml
<CustomField>
    <fullName>SystemReference__c</fullName>
    <label>System Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>